--- a/site.yml
+++ b/site.yml
@@ -1,5 +1,6 @@
 ---
-- import_playbook: anygroup.yml
+- name: Import anygroup playbook
+  import_playbook: anygroup.yml
 
 # Import all other group playbooks in this file...
 
