--- a/anygroup.yml
+++ b/anygroup.yml
@@ -1,9 +1,8 @@
 ---
-- hosts: anygroup
+- name: Play 1
+  hosts: anygroup
   roles:
     - common
     - anyrole
 
 # Associate further roles to servers in specific group in this file...
-
-...
