Configure to prepare a linux environment to be Kubernetes-ready

--- a/site.yml
+++ b/site.yml
@@ -1,7 +1,3 @@
 ---
 - name: Import anygroup playbook
-  import_playbook: anygroup.yml
-
-# Import all other group playbooks in this file...
-
-...
+  import_playbook: kubeslice.yml
